--- a/index.html
+++ b/index.html
@@ -1,17 +1,27 @@
-
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
+
 <head>
     <meta charset="UTF-8">
+    <title>Leaning bootstrap</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </head>
+
 <body>
-    <h3>Hello, world!</h3>
-    <h5>New menu</h5>
-    <div class="">.</div>
-    ...
+    <div class="container-fluid">
+        <h1>3 различных блока</h1>
+        <div class="row">
+            <div class="col-md-4" id="mycolor1">Left</div>
+            <div class="col-md-4" id="mycolor2">Middle</div>
+            <div class="col-md-4" id="mycolor3">Right</div>
+        </div>
+    </div>
+
 </body>
+
 </html>
+
 </html>
